Added debug code for distributed version.